jswt-parser/src/snapshots/jswt_parser__function__test__function_declaration_statement.snap
---
source: jswt-parser/src/function.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_function_declaration_statement",
                    module: "module/test_function_declaration_statement",
                    start: 0,
                    end: 19,
                    [content]: "function test() { }",
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_function_declaration_statement",
                        module: "module/test_function_declaration_statement",
                        start: 0,
                        end: 19,
                        [content]: "function test() { }",
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_function_declaration_statement",
                                    module: "module/test_function_declaration_statement",
                                    start: 0,
                                    end: 19,
                                    [content]: "function test() { }",
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_function_declaration_statement",
                                        module: "module/test_function_declaration_statement",
                                        start: 9,
                                        end: 13,
                                        [content]: "test",
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_function_declaration_statement",
                                        module: "module/test_function_declaration_statement",
                                        start: 16,
                                        end: 19,
                                        [content]: "{ }",
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
