jswt-parser/src/snapshots/jswt_parser__function__test__function_declaration_statement_with_block_body.snap
---
source: jswt-parser/src/function.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_function_declaration_statement_with_block_body",
                    module: "module/test_function_declaration_statement_with_block_body",
                    start: 0,
                    end: 22,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_function_declaration_statement_with_block_body",
                        module: "module/test_function_declaration_statement_with_block_body",
                        start: 0,
                        end: 22,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_function_declaration_statement_with_block_body",
                                    module: "module/test_function_declaration_statement_with_block_body",
                                    start: 0,
                                    end: 22,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_function_declaration_statement_with_block_body",
                                        module: "module/test_function_declaration_statement_with_block_body",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_function_declaration_statement_with_block_body",
                                        module: "module/test_function_declaration_statement_with_block_body",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_function_declaration_statement_with_block_body",
                                        module: "module/test_function_declaration_statement_with_block_body",
                                        start: 16,
                                        end: 22,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Block(
                                                BlockStatement {
                                                    span: Span {
                                                        file: "test_function_declaration_statement_with_block_body",
                                                        module: "module/test_function_declaration_statement_with_block_body",
                                                        start: 18,
                                                        end: 20,
                                                    },
                                                    statements: StatementList {
                                                        statements: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
