jswt-parser/src/snapshots/jswt_parser__function__test__function_declaration_statement_with_export_decorator.snap
---
source: jswt-parser/src/function.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_function_declaration_statement_with_export_decorator",
                    module: "module/test_function_declaration_statement_with_export_decorator",
                    start: 0,
                    end: 26,
                    [content]: "export function test() { }",
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_function_declaration_statement_with_export_decorator",
                        module: "module/test_function_declaration_statement_with_export_decorator",
                        start: 0,
                        end: 26,
                        [content]: "export function test() { }",
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_function_declaration_statement_with_export_decorator",
                                    module: "module/test_function_declaration_statement_with_export_decorator",
                                    start: 0,
                                    end: 26,
                                    [content]: "export function test() { }",
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: true,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_function_declaration_statement_with_export_decorator",
                                        module: "module/test_function_declaration_statement_with_export_decorator",
                                        start: 16,
                                        end: 20,
                                        [content]: "test",
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_function_declaration_statement_with_export_decorator",
                                        module: "module/test_function_declaration_statement_with_export_decorator",
                                        start: 20,
                                        end: 22,
                                        [content]: "()",
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_function_declaration_statement_with_export_decorator",
                                        module: "module/test_function_declaration_statement_with_export_decorator",
                                        start: 23,
                                        end: 26,
                                        [content]: "{ }",
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
