jswt-parser/src/snapshots/jswt_parser__function__test__function_declaration_statement_with_one_param.snap
---
source: jswt-parser/src/function.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_function_declaration_statement_with_one_param",
                                    module: "module/test_function_declaration_statement_with_one_param",
                                    start: 0,
                                    end: 25,
                                    [content]: "function name(a: i32) { }",
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_function_declaration_statement_with_one_param",
                                        module: "module/test_function_declaration_statement_with_one_param",
                                        start: 9,
                                        end: 13,
                                        [content]: "name",
                                    },
                                    value: "name",
                                },
                                params: FormalParameterList {
                                    parameters: [
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test_function_declaration_statement_with_one_param",
                                                    module: "module/test_function_declaration_statement_with_one_param",
                                                    start: 14,
                                                    end: 15,
                                                    [content]: "a",
                                                },
                                                value: "a",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test_function_declaration_statement_with_one_param",
                                                    module: "module/test_function_declaration_statement_with_one_param",
                                                    start: 17,
                                                    end: 20,
                                                    [content]: "i32",
                                                },
                                                ty: Primitive(
                                                    I32,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_function_declaration_statement_with_one_param",
                                        module: "module/test_function_declaration_statement_with_one_param",
                                        start: 22,
                                        end: 25,
                                        [content]: "{ }",
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
