jswt-parser/src/snapshots/jswt_parser__function__test__parse_function_declaration_statement_with_two_params_and_return_value.snap
---
source: jswt-parser/src/function.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                    module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                    start: 0,
                    end: 38,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                        module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                        start: 0,
                        end: 38,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                    module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                    start: 0,
                                    end: 38,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                        module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                        module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                        start: 13,
                                        end: 29,
                                    },
                                    parameters: [
                                        FormalParameterArg {
                                            span: Span {
                                                file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                start: 14,
                                                end: 20,
                                            },
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                    module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                    start: 14,
                                                    end: 15,
                                                },
                                                value: "a",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                    module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                    start: 17,
                                                    end: 20,
                                                },
                                                ty: Identifier(
                                                    IdentifierType {
                                                        name: "i32",
                                                    },
                                                ),
                                            },
                                        },
                                        FormalParameterArg {
                                            span: Span {
                                                file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                start: 22,
                                                end: 28,
                                            },
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                    module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                    start: 22,
                                                    end: 23,
                                                },
                                                value: "b",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                    module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                                    start: 25,
                                                    end: 28,
                                                },
                                                ty: Identifier(
                                                    IdentifierType {
                                                        name: "i32",
                                                    },
                                                ),
                                            },
                                        },
                                    ],
                                },
                                returns: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                            module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                            start: 31,
                                            end: 34,
                                        },
                                        ty: Identifier(
                                            IdentifierType {
                                                name: "i32",
                                            },
                                        ),
                                    },
                                ),
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_function_declaration_statement_with_two_params_and_return_value",
                                        module: "module/test_parse_function_declaration_statement_with_two_params_and_return_value",
                                        start: 35,
                                        end: 38,
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
