jswt-parser/src/snapshots/jswt_parser__function__test__parse_function_with_multiple_annotations.snap
---
source: jswt-parser/src/function.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_function_with_multiple_annotations",
                    module: "module/test_parse_function_with_multiple_annotations",
                    start: 0,
                    end: 37,
                    [content]: "@inline @wast(\"test\") function a() {}",
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_function_with_multiple_annotations",
                        module: "module/test_parse_function_with_multiple_annotations",
                        start: 0,
                        end: 37,
                        [content]: "@inline @wast(\"test\") function a() {}",
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_function_with_multiple_annotations",
                                    module: "module/test_parse_function_with_multiple_annotations",
                                    start: 22,
                                    end: 37,
                                    [content]: "function a() {}",
                                },
                                decorators: FunctionDecorators {
                                    annotations: [
                                        Annotation {
                                            span: Span {
                                                file: "test_parse_function_with_multiple_annotations",
                                                module: "module/test_parse_function_with_multiple_annotations",
                                                start: 0,
                                                end: 7,
                                                [content]: "@inline",
                                            },
                                            name: Identifier {
                                                span: Span {
                                                    file: "test_parse_function_with_multiple_annotations",
                                                    module: "module/test_parse_function_with_multiple_annotations",
                                                    start: 1,
                                                    end: 7,
                                                    [content]: "inline",
                                                },
                                                value: "inline",
                                            },
                                            expr: None,
                                        },
                                        Annotation {
                                            span: Span {
                                                file: "test_parse_function_with_multiple_annotations",
                                                module: "module/test_parse_function_with_multiple_annotations",
                                                start: 8,
                                                end: 21,
                                                [content]: "@wast(\"test\")",
                                            },
                                            name: Identifier {
                                                span: Span {
                                                    file: "test_parse_function_with_multiple_annotations",
                                                    module: "module/test_parse_function_with_multiple_annotations",
                                                    start: 9,
                                                    end: 13,
                                                    [content]: "wast",
                                                },
                                                value: "wast",
                                            },
                                            expr: Some(
                                                Literal(
                                                    String(
                                                        StringLiteral {
                                                            span: Span {
                                                                file: "test_parse_function_with_multiple_annotations",
                                                                module: "module/test_parse_function_with_multiple_annotations",
                                                                start: 14,
                                                                end: 20,
                                                                [content]: "\"test\"",
                                                            },
                                                            value: "test",
                                                        },
                                                    ),
                                                ),
                                            ),
                                        },
                                    ],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_function_with_multiple_annotations",
                                        module: "module/test_parse_function_with_multiple_annotations",
                                        start: 31,
                                        end: 32,
                                        [content]: "a",
                                    },
                                    value: "a",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_function_with_multiple_annotations",
                                        module: "module/test_parse_function_with_multiple_annotations",
                                        start: 32,
                                        end: 34,
                                        [content]: "()",
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_function_with_multiple_annotations",
                                        module: "module/test_parse_function_with_multiple_annotations",
                                        start: 35,
                                        end: 37,
                                        [content]: "{}",
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
